--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,6 +36,9 @@ website:
           - lectures/L01/index.qmd
           - lectures/L02/index.qmd
           - lectures/L03/index.qmd
+          - lectures/L04/index.qmd
+          - lectures/L05/index.qmd
+          - lectures/L06/index.qmd
 
 
 format:
