--- a/.github/workflows/render_pages.yml
+++ b/.github/workflows/render_pages.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: 3.13
       - name: Setup marimo packages
         run: |
-          pip install marimo
+          pip install marimo jupyter
       - name: Setup quarto
         uses: quarto-dev/quarto-actions/setup@v2
       - name: Setup Pages
@@ -36,10 +36,6 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Quarto render
         uses: quarto-dev/quarto-actions/render@v2
-      # - name: Export with marimo
-      #   run: |
-      #     mkdir _build
-      #     marimo export html-wasm --mode run --no-show-code mate374_guest_lecture_Tian.py -o _build/
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v4
