add lecture 5 notes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,7 +52,7 @@ format:
     navigation-mode: linear
     incremental: false
     center: false
-    footer: "CHE 318 · Mass Transfer · WS 2026"
+    footer: <a href="./index.qmd">CHE 318 · Mass Transfer · WS 2026 ↰</a>
     title-slide-attributes:
       data-background-color: "#efefef"
     number-sections: false
