--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,8 @@ website:
         text: Syllabus
       - href: lectures/
         text: Lectures
+      - href: scripts/
+        text: Interactive Demos
   
   sidebar:
     title: false
@@ -39,6 +41,9 @@ website:
           - lectures/L04/index.qmd
           - lectures/L05/index.qmd
           - lectures/L06/index.qmd
+      - section: "Interactive Demos"
+        contents:
+          - scripts/index.qmd
 
 
 format:
