--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,6 +44,9 @@ website:
           - lectures/L07/index.qmd
           - lectures/L08/index.qmd
           - lectures/L09/index.qmd
+          - lectures/L10/index.qmd
+          - lectures/L11/index.qmd
+          - lectures/L12/index.qmd
       - section: "Interactive Demos"
         contents:
           - scripts.qmd
