--- a/.github/workflows/render_pages.yml
+++ b/.github/workflows/render_pages.yml
@@ -33,6 +33,9 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           tinytex: true
+      - name: Install chromium in quarto
+        run: |
+          quarto install chromium
       - name: Install librsvg-convert
         run: sudo apt-get update && sudo apt-get install -y librsvg2-bin
       - name: Setup Pages
