--- a/_quarto.yml
+++ b/_quarto.yml
@@ -47,6 +47,9 @@ website:
           - lectures/L10/index.qmd
           - lectures/L11/index.qmd
           - lectures/L12/index.qmd
+          - lectures/L13/index.qmd
+          - lectures/L14/index.qmd
+          - lectures/L15/index.qmd
       - section: "Interactive Demos"
         contents:
           - scripts.qmd
