--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,6 +50,8 @@ website:
           - lectures/L13/index.qmd
           - lectures/L14/index.qmd
           - lectures/L15/index.qmd
+          - lectures/L16/index.qmd
+          - lectures/L17/index.qmd
       - section: "Interactive Demos"
         contents:
           - scripts.qmd
