--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,6 +52,8 @@ website:
           - lectures/L15/index.qmd
           - lectures/L16/index.qmd
           - lectures/L17/index.qmd
+          - lectures/L18/index.qmd
+          - lectures/L19/index.qmd
       - section: "Interactive Demos"
         contents:
           - scripts.qmd
@@ -68,6 +70,7 @@ format:
     preview-links: auto
     transition: none
     navigation-mode: linear
+    scrollable: true
     incremental: false
     center: false
     footer: <a href="./index.qmd">CHE 318 · Mass Transfer · WS 2026 ↰</a>
