--- a/_quarto.yml
+++ b/_quarto.yml
@@ -54,6 +54,7 @@ website:
           - lectures/L17/index.qmd
           - lectures/L18/index.qmd
           - lectures/L19/index.qmd
+          - lectures/L20/index.qmd
       - section: "Interactive Demos"
         contents:
           - scripts.qmd
